# mni2mz3

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/: args.rs  io.rs  lib.rs  main.rs  mz3.rs  obj.rs  scalar.rs
tests/: test_collin_example.rs
wix/: main.wxs
