[package]
name = "mni2mz3"
version = "0.1.0-rc.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
fs-err = "2.9.0"
main_error = "0.1.2"
thiserror = "1.0.50"

[dev-dependencies]
approx = "0.5.1"
assert_cmd = { version = "2.0.12", features = ["color"] }
rstest = "0.18.2"
tempfile = "3.8.1"

# improve speed of tests
[profile.test]
opt-level = 2
