[package]
name = "mni2mz3"
version = "0.1.0-rc.2"
edition = "2021"

authors = ["Jennings Zhang <jennings.zhang@childrens.harvard.edu>"]
readme = "README.md"
description = "Brain imaging surface mesh file format converter"
repository = "https://github.com/FNNDSC/mni2mz3"
license = "MIT"
categories = ["science::neuroscience", "science", "graphics", "command-line-utilities"]
keywords = ["surface", "mesh", "MNI", "obj", "mz3"]

[dependencies]
flate2 = "1.0.28"
fs-err = "2.9.0"
main_error = "0.1.2"
thiserror = "1.0.50"

[dev-dependencies]
approx = "0.5.1"
rstest = "0.18.2"
tempfile = "3.8.1"

# improve speed of tests
[profile.test]
opt-level = 2

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "npm"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".zip"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
pr-run-mode = "skip"
# Whether to publish prereleases to package managers
publish-prereleases = true
